fixed product card button overlap issue

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -452,3 +452,13 @@ hr {
     overflow-x: hidden;
     overflow-y: hidden;
 }
+
+.btns-cart {
+    position: relative;
+    top: -100px;
+}
+
+.btns-products {
+    position: relative;
+    top: -50px;
+}
